--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "luxon": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.175",
     "@types/luxon": "^1.27.1",
     "@types/react-router": "^5.1.14",
     "@types/react-router-dom": "^5.1.7"
